--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -29,7 +29,14 @@
         "id": "31NfnQcvPDoY"
       },
       "source": [
-        "# MutMap - practice -"
+        "# MutMap - practice -\n",
+        "\n",
+        "We will perform MutMap analysis using simulation data & published data in this practice part.\n",
+        "\n",
+        "It may help you to understand ...\n",
+        "* the process of MutMap analysis \n",
+        "* How to interpret the results of MutMap\n",
+        "* What data is required for MutMap"
       ]
     },
     {
@@ -47,7 +54,7 @@
         "  * We assume very simple organism & conduct MutMap analysis to understand the process of MutMap.\n",
         "\n",
         "* 2nd practice - MutMap analysis for published sample data -\n",
-        "  * We use published data in MutMap paper [(Abe et al., 2012)](https://www.nature.com/articles/nbt.2095) & conduct MutMap analysis."
+        "  * We use published data in MutMap paper [(Abe et al., 2012)](https://www.nature.com/articles/nbt.2095) & perform MutMap analysis."
       ],
       "metadata": {
         "id": "wZpUAKrgmHnm"
@@ -71,7 +78,7 @@
         "\n",
         "In the Google Colab, we call this page(file) is \"Notebook\".  And Notebook is the file that you can run program, command, ... etc.\n",
         "\n",
-        "Google Colab is the online service that you can show, edit, and implement \"Notebook\" on the Google server (Colab server).\n",
+        "Google Colab is the online service that you can show, edit, and run the \"Notebook\" on the Google server (Colab server).\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/colab.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
         "\n",
@@ -92,7 +99,13 @@
       "source": [
         "## How to use Google Colab\n",
         "\n",
-        "In the Google Colab notebook, you can write code(program), and run your program.\n",
+        "In the notebook, there are 2 type of cells.\n",
+        "\n",
+        "The cell shows texts & figures is text cell. \n",
+        "\n",
+        "The cell shows code (like below cell) is code cell.\n",
+        "\n",
+        "In the Google Colab notebook, you can write code(program), and run your program in the code cell.\n",
         "\n",
         "```\n",
         "How to run the program\n",
@@ -115,7 +128,7 @@
       "source": [
         "# sample code\n",
         "\n",
-        "11 + 35"
+        "1100 + 350"
       ],
       "metadata": {
         "id": "LaqZN-Dy0wXM"
@@ -129,7 +142,7 @@
         "# sample code2\n",
         "\n",
         "for i in range(10):\n",
-        "  print(\"{}^3 = \".format(i), i*i*i)"
+        "  print(\"{}x{}x{} = \".format(i,i,i), i*i*i)"
       ],
       "metadata": {
         "id": "Q7gms5XmVSL_"
@@ -168,12 +181,12 @@
         "  - By creating an F2 population, we obtain a large number of individuals with shuffled genome.\n",
         "  - Each mutation introduced to the genome has about a 50% chance of being transmitted to each F2 individual.\n",
         "  - The F2 individuals with the mutant trait should have certain common mutations in the genome.\n",
-        "1. Collect DNA from the mutant individuals (bulk DNA) and perform next generation sequencing. The original strain is sequenced at the same time.\n",
-        "1. Compare both the original line and the bulk DNA sequence to obtain the following information\n",
+        "1. Collect DNA from the mutant individuals (bulk DNA) and perform next generation sequencing. The original line is sequenced at the same time.\n",
+        "1. Compare  the original line and the bulk DNA sequence to obtain the following information\n",
         "  - The position where the mutation was introduced\n",
         "  - The type of base in the original line (reference base) and the base of the mutation\n",
         "  - The number of reference and mutant bases in the bulk DNA sequence\n",
-        "1. Calculate the percentage of mutant bases in the bulk DNA sequence (**SNP-index**) across the genome to identify genomic regions where only mutant bases are found (causal geenomic regions).\n",
+        "1. Calculate the percentage of mutant bases in the bulk DNA sequence (**SNP-index**) across the genome to identify genomic regions where only mutant bases are found in the bulk DNA (causal genomic regions).\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/MutMap.png?raw=true\" alt=\"title\" height=\"600px\">\n",
         "\n",
@@ -190,7 +203,7 @@
       "source": [
         "# Introduction of MutMap pipeline\n",
         "\n",
-        "Our laboratory developped the very simple pipeline to conduct MutMap.\n",
+        "Our laboratory & team developped the very simple pipeline to perform MutMap.\n",
         "\n",
         "<img src=\"https://github.com/YuSugihara/MutMap/blob/master/images/1_logo.png?raw=true\" alt=\"title\" height=\"100px\">\n",
         "\n",
@@ -313,7 +326,7 @@
         "\n",
         "To identify which mutation is the causative mutation, we try to use MutMap analysis.\n",
         "\n",
-        "To do MutMap analysis, we generate progenies between reference(original line) and mutant line.\n",
+        "To perform MutMap analysis, we generate F2 progenies between reference(original line) and mutant line.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation3.png?raw=true\" alt=\"title\" height=\"400px\">\n",
         "\n",
@@ -341,29 +354,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Above code generates simulated progeny of reference line and mutant line.\n",
-        "\n",
-        "You can check what simulated population was generated by below code."
+        "Above code generates simulated progeny of reference line and mutant line."
       ],
       "metadata": {
         "id": "k8kGmzcl8vSC"
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "progeny"
-      ],
-      "metadata": {
-        "id": "-FpcOv8B8t2s"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "Until here(EMS mutagenesis & Generate progeny), these process are experimental part in reality.\n",
+        "Until here(EMS mutagenesis & Generate F2 progeny), these process are experimental part in reality.\n",
         "\n",
         "But we generate simulation progenies by program in this notebook.\n",
         "\n",
@@ -374,12 +374,26 @@
         "\n",
         "So, we have the genotype data of simulated population.\n",
         "\n",
-        "But we usually don't know the genotype of progenies in reality.\n",
-        "```"
+        "```\n",
+        "\n",
+        "You can check what simulated population was generated using below code.\n",
+        "\n",
+        "※But we usually don't know the genotype of progenies in reality."
       ],
       "metadata": {
         "id": "ZhdJHma_SG21"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "progeny"
+      ],
+      "metadata": {
+        "id": "Uo54h8hLtem0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -392,7 +406,9 @@
         "\n",
         "Then, we conduct bulked sequencing of these samples.\n",
         "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation4.png?raw=true\" alt=\"title\" height=\"250px\">"
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation4.png?raw=true\" alt=\"title\" height=\"250px\">\n",
+        "\n",
+        "The below code generate 10bp reads of bulk DNA (default is 50 reads)"
       ],
       "metadata": {
         "id": "e0RkR0EhAVST"
@@ -412,15 +428,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After run the above program, the program generate fasta file of bulked sequences.\n",
+        "After run the above program, the program generate fastq file of bulked sequences.\n",
         "\n",
-        "You can check this fasta file using file system ↓\n",
+        "You can check this fastq file using file system ↓\n",
         "\n",
         "```\n",
         "How to check files in your Google Colab server space.\n",
         "1. Click the file icon in upper left.\n",
         "2. The file list showed files in your server space.\n",
-        "(3. if there is no \"bulked_sequences.fasta\", please click the third icon from the right\n",
+        "(3. if there is no \"bulked_sequences.fastq\", please click the third icon from the right\n",
         "```\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/filesystem.png?raw=true\" alt=\"title\" height=\"250px\">"
       ],
@@ -435,13 +451,7 @@
         "\n",
         "To predict which mutation is causative from bulked sequence data,\n",
         "\n",
-        "we will map these sequence reads to the reference genotype and find the common mutation in mutant lines using SNP index as an indicator.\n",
-        "\n",
-        "```\n",
-        "※In this notebook, we used fasta file as sequence data. \n",
-        "\n",
-        "But basically, fastq file is used for MutMap analysis, which include quality score of sequences.\n",
-        "```"
+        "we will align these sequence reads to the reference genome and find the common mutation in mutant lines using SNP index as an indicator."
       ],
       "metadata": {
         "id": "ICTDKi2IDXG6"
@@ -450,19 +460,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Alignment reads to the reference sequence\n",
+        "### Alignment of bulk DNA reads to the reference sequence\n",
         "\n",
-        "After we get sequence data of bulked samples, we will map these sequences to the reference read & align them.\n",
+        "After we get sequence data of bulked samples, we will align these sequences to the reference genome.\n",
         "\n",
         "Then, we calculate the bias of the number of variant for each position.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/alignment.png?raw=true\" alt=\"title\" height=\"250px\">\n",
         "\n",
-        "In this notebook, we will conduct alignment of these reads via our program.\n",
+        "In this notebook, we will perform alignment of these reads via our program.\n",
         "\n",
-        "But basically, mapping tool such as [BWA](http://bio-bwa.sourceforge.net/) are used.\n",
+        "But basically, when we perform alignment, mapping tool such as [BWA](http://bio-bwa.sourceforge.net/) are used.\n",
         "\n",
-        "So, if you conduct MutMap analysis by your own data, mapping tool is recommended."
+        "So, if you conduct MutMap analysis by your own data, it has required to use mapping tool.\n",
+        "\n",
+        "But MutMap analysis pipeline that we introduced before contains mapping tools, you don't need to care about it."
       ],
       "metadata": {
         "id": "cWYdn7OlDbJ3"
@@ -578,7 +590,7 @@
       "source": [
         "# check analysis results & real genotype\n",
         "\n",
-        "MutMap analysis showed the 6th position is causative mutation because SNP index is 1.\n",
+        "MutMap analysis showed the candidate position of causative mutation. (position showed SNP index is 1)\n",
         "\n",
         "The below code showed the genotype of progenies that program generated at part2.\n",
         "\n",
@@ -626,7 +638,11 @@
         "- the number of progeny\n",
         "- the number of reads\n",
         "\n",
-        "please make different situation & perform MutMap analysis using below code."
+        "please make different situation & perform MutMap analysis using below code.\n",
+        "\n",
+        "```\n",
+        "※if you specify large length (like 10000~), it may take so much time.\n",
+        "```"
       ],
       "metadata": {
         "id": "miYIj1If9soJ"
@@ -642,6 +658,32 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# (c.f. When you use MutMap analysis pipeline)\n",
+        "\n",
+        "when you use the pipeline that our group developped, you just install pipeline & use below command.\n",
+        "\n",
+        "The required input data is ...\n",
+        "* reference fasta\n",
+        "* reference sequence reads\n",
+        "* Bulk DNA sequence reads \n",
+        "\n",
+        "```\n",
+        "mutmap -r reference_sequences.fasta -c reference.fastq -b bulked_sequences.fastq -n 20 -o output_name\n",
+        "```\n",
+        "\n",
+        "ex) The public avaliable reference genome of Rice is Nipponbare cultivar.\n",
+        "\n",
+        "But if you want to use different cultivar like Hitomebore cultivar as a reference, reference.fastq is required.\n",
+        "\n",
+        "c.f. https://github.com/YuSugihara/MutMap\n"
+      ],
+      "metadata": {
+        "id": "xJevQ0MeT8-4"
+      }
     },
     {
       "cell_type": "markdown",
@@ -687,7 +729,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Bulked sequencing & alignment\n",
+        "## Bulked sequencing & alignment of mutant phenotype F2 lines\n",
         "\n",
         "Then, we conducted bulked sequencing of progenies that showed mutant phenotype.\n",
         "\n",
@@ -722,6 +764,17 @@
       ],
       "metadata": {
         "id": "p7yOprThSkOA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alignment_results"
+      ],
+      "metadata": {
+        "id": "FkNYKFrh079Q"
       },
       "execution_count": null,
       "outputs": []
