--- a/textbook/GenomicPrediction.ipynb
+++ b/textbook/GenomicPrediction.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -29,7 +30,17 @@
         "id": "31NfnQcvPDoY"
       },
       "source": [
-        "# Genomic Prediction - example -"
+        "# Genomic Prediction - example -\n",
+        "\n",
+        "In this notebook, we will perform Genomic Prediction analysis using simplified our own data.\n",
+        "\n",
+        "And we will conduct simulation study of application of genomic prediction model in breeding strategy\n",
+        "\n",
+        "It may help you to understand ...\n",
+        "\n",
+        "* the process of Genomic Prediction analysis\n",
+        "\n",
+        "* how to use genomic prediction model in breeding"
       ]
     },
     {
@@ -41,7 +52,13 @@
         "\n",
         "* Genomic prediction model using sample dataset\n",
         "\n",
-        "  * We assume rice population."
+        "  * We assume rice population.\n",
+        "\n",
+        "* Application of genomic prediction model\n",
+        "\n",
+        "  * We will predict phenotypes of F2 progeny\n",
+        "\n",
+        "  * We will consider ideal genotype for traits"
       ],
       "metadata": {
         "id": "wZpUAKrgmHnm"
@@ -105,8 +122,12 @@
         "from genomic_prediction import load_dataset\n",
         "from genomic_prediction import split_dataset\n",
         "from genomic_prediction import make_genomic_prediction_model\n",
+        "from genomic_prediction import check_equation\n",
         "from genomic_prediction import predict_phenotype\n",
-        "from genomic_prediction import check_accuracy"
+        "from genomic_prediction import check_accuracy\n",
+        "from genomic_prediction import show_estimated_SNP_effect\n",
+        "from genomic_prediction import predict_progeny_phenotype\n",
+        "from genomic_prediction import predict_customized_genotype"
       ],
       "metadata": {
         "id": "SrpHtwtSwcNi"
@@ -158,8 +179,8 @@
       "source": [
         "The dataset include almost 1000 lines.\n",
         "\n",
-        "- SNP genotype\n",
-        "- Grain number & Leaf width phenotypes"
+        "- SNP genotype (0 = cultivar A, 2 = other cultivar)\n",
+        "- Phenotypes: Leaf width(LW_mean) & Grain number(GN_mean)"
       ],
       "metadata": {
         "id": "Ze78U4-QLIGW"
@@ -168,11 +189,23 @@
     {
       "cell_type": "code",
       "source": [
-        "display(genotype)\n",
-        "display(phenotype)"
+        "# show genotype\n",
+        "display(genotype)"
       ],
       "metadata": {
         "id": "tTDuuDTCLIO3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# show phenotype\n",
+        "display(phenotype)"
+      ],
+      "metadata": {
+        "id": "DjwJD5TYHFob"
       },
       "execution_count": null,
       "outputs": []
@@ -254,13 +287,13 @@
         "\n",
         "After splitting dataset,\n",
         "\n",
-        "Using training dataset (80%), make genomic prediction model that explain phenotype from genotype.\n",
+        "Base on training dataset (80%), we'll make genomic prediction model that explain phenotype from genotype.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation15.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
         "\n",
         "The below code generate prediction model.\n",
         "\n",
-        "(we skipped explanation of details of the model in this lecture.)"
+        "(The model is ElasticNet model. But we skipped explanation of details of the model in this lecture because it's not statistics lecture.)"
       ],
       "metadata": {
         "id": "vsj2Nq48Bkxo"
@@ -273,6 +306,26 @@
       ],
       "metadata": {
         "id": "14Q1rH_MBk6Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "※The equation is like this↓"
+      ],
+      "metadata": {
+        "id": "XwqkJpR_JOrU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "check_equation(\"LW_mean\", LW_prediction_model)"
+      ],
+      "metadata": {
+        "id": "p98oGFVeJO1y"
       },
       "execution_count": null,
       "outputs": []
@@ -380,7 +433,12 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "genotype, phenotype = load_dataset()\n",
+        "test_genotype, test_phenotype, train_genotype, train_phenotype = split_dataset(genotype, phenotype, \"GN_mean\", test=0.2)\n",
+        "GN_prediction_model = make_genomic_prediction_model(train_genotype, train_phenotype, \"GN_mean\")\n",
+        "predicted_test_phenotype = predict_phenotype(test_genotype, GN_prediction_model)\n",
+        "check_accuracy(predicted_test_phenotype, test_phenotype, \"GN_mean\")\n",
+        "print(check_equation(\"GN_mean\", GN_prediction_model))"
       ],
       "metadata": {
         "id": "JBo51dn66m7b"
@@ -406,7 +464,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Consider which combination of cultivars is best to cross to get high phenotype progenies."
+        "## Consider which combination of cultivars is best to cross to get high phenotype progenies.\n",
+        "\n",
+        "We have 933 lines that have different genotypes.\n",
+        "\n",
+        "So, maybe there are special combinations to generate high yield progenies.\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation17.png?raw=true\" alt=\"colab\" height=\"400px\">"
       ],
       "metadata": {
         "id": "buzjQQDUB6b2"
@@ -415,7 +479,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### make simulation data"
+        "### make simulation data & predict ohenotypes by prediction model"
       ],
       "metadata": {
         "id": "bQLKV6Y7LzeN"
@@ -424,7 +488,10 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "genotype, phenotype = load_dataset()\n",
+        "import pandas as pd\n",
+        "pd.set_option('display.max_rows', 1000)\n",
+        "phenotype"
       ],
       "metadata": {
         "id": "VivSZIaSCA09"
@@ -433,21 +500,12 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### predict phenotypes of simulation data"
-      ],
-      "metadata": {
-        "id": "bbdA96-kL1Mt"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        ""
+        "predict_progeny_phenotype(\"Line522\", \"Line523\", 100, genotype, GN_prediction_model)"
       ],
       "metadata": {
-        "id": "Vt9D8xn2L5a4"
+        "id": "662dHLzLPDN6"
       },
       "execution_count": null,
       "outputs": []
@@ -455,27 +513,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### check distribution of simulated data"
-      ],
-      "metadata": {
-        "id": "xKM5xqiWL6-G"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "NSy9r2p4L7N7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Consider best genotype for traits"
+        "## Consider best genotype for traits\n",
+        "\n",
+        "If we can generate highly accurate genomic prediction model, we can consider what genotype is ideal for traits based on the model.\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation18.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
+        "\n",
+        "So, in this section, we'll try to find good genotype for grain number."
       ],
       "metadata": {
         "id": "Z6yyI5M3CAQ3"
@@ -484,27 +528,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### check estimated SNP effect"
-      ],
-      "metadata": {
-        "id": "zem5AgtRMBCx"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "show_estimated_SNP_effect(prediction_model)"
-      ],
-      "metadata": {
-        "id": "gDVTkCDsCE3y"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### make customized genotype"
+        "### Make customized genotype & predict phenotype\n",
+        "\n",
+        "For example, if we introgressed mutations in chromosome 1 & 5 to the cultivar A, how does phenotype change?\n",
+        "\n",
+        "We can predict this phenotype by genomic prediction model.\n",
+        "\n",
+        "like below code.\n"
       ],
       "metadata": {
         "id": "efOCS7T2MG8F"
@@ -513,7 +543,7 @@
     {
       "cell_type": "code",
       "source": [
-        "make_customized_genotype()"
+        "predict_customized_genotype(genotype, [\"chr01\", \"chr05\"], GN_prediction_model, \"GN_mean\")"
       ],
       "metadata": {
         "id": "8TVxL8rMMLoJ"
@@ -524,19 +554,42 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### predict phenotypes of customized genotype"
+        "Like above simulation, we can predict phenotype values of any genotypes.\n",
+        "\n",
+        "From this approach, we can identify best genotype for traits!\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation19.png?raw=true\" alt=\"colab\" height=\"200px\">"
       ],
       "metadata": {
-        "id": "EUxLdTfrMMhj"
+        "id": "b_02WquJhH-3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Play with prediction!\n",
+        "Try to find best genotype by editing chromosome genotype.\n",
+        "You can edit below code & run.\n",
+        "\n",
+        "ex) \n",
+        "\n",
+        "`predict_customized_genotype(genotype, [\"chr12\"], GN_prediction_model, \"GN_mean\")`\n",
+        "\n",
+        "`predict_customized_genotype(genotype, [\"chr01\", \"chr07\", \"chr12\"], GN_prediction_model, \"GN_mean\")`\n",
+        "\n",
+        "`predict_customized_genotype(genotype, [\"chr01\", \"chr02\", \"chr03\", \"chr04\"], GN_prediction_model, \"GN_mean\")`\n"
+      ],
+      "metadata": {
+        "id": "Zp7LA-q_crpf"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "predict_phenotype(customized_genotype, prediction_model)"
+        "predict_customized_genotype(genotype, [\"chr01\", \"chr02\", \"chr03\", \"chr04\"], GN_prediction_model, \"GN_mean\")"
       ],
       "metadata": {
-        "id": "LbNytIbZMTbo"
+        "id": "XWxT4IK0c9Zz"
       },
       "execution_count": null,
       "outputs": []
@@ -544,10 +597,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "This simulation study is editing genotype of chromosome level.\n",
+        "\n",
+        "But of course, we can also consider regional level/gene level.\n",
+        "\n",
+        "And we should consider the aspect that what materials(cultivars/genotypes) can we use to consider ideal & feasible genotype."
       ],
       "metadata": {
-        "id": "drM9isy8MSRp"
+        "id": "UBqYcrUFhz38"
       }
     },
     {
@@ -559,16 +616,28 @@
         "---\n",
         "## Summary\n",
         "\n",
-        "In this notebook, we demonstrate **MutMap** analysis using simulation data & published sample data.\n",
+        "In this notebook, we demonstrate **Genomic Prediction** analysis using unpublished data.\n",
         "\n",
-        "This data is small dataset (only chromosome10, just 272 SNPs).\n",
+        "You can predict phenotypes from genotype information by genomic prediction model.\n",
+        "\n",
+        "Thus, you can calculate the best combination to generate new cultivars.\n",
+        "\n",
+        "Also, you can find out the ideal genotype for traits.\n",
         "   \n",
-        "You can use the pipeline that our lab developped for bigger data (like few million lines...etc)\n",
-        "(https://github.com/YuSugihara/MutMap)\n",
-        "   \n",
-        "Tomorrow, we'll demonstrate **QTL-seq** analysis & **Sliding window** analysis for MutMap & QTL-seq to identify causative genes.\n",
+        "If you can generate good population which has high genetic variaty, genomic prediction approach is one of the approaches to achieve generating high-yield cultivar.\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "K9sGe7-I3EcN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
