--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -80,9 +80,9 @@
         "\n",
         "So, you don't need to use your local PC to run the program!\n",
         "\n",
-        "In the Google Colab, we call this page(file) is \"Notebook\". We use this Notebook to edit/show/run the programs.\n",
-        "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/colab.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
+        "\n",
+        "In the Google Colab, we call this page(file) is \"Notebook\". We use this Notebook to edit/show/run the programs.\n",
         "\n",
         "In addition, you can access and use the notebook that other people made.\n",
         "\n",
@@ -130,7 +130,7 @@
       "source": [
         "# sample code\n",
         "\n",
-        "11 + 21"
+        "11 + 100"
       ],
       "metadata": {
         "id": "LaqZN-Dy0wXM"
@@ -155,7 +155,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Googel Colab has a lot of useful functions such as save & export notebook,  use GPU/TPU environment for Machine Learning ... etc\n",
+        "Googel Colab has a lot of useful functions such as save & export notebook,  use environment for Machine Learning ... etc\n",
         "\n",
         "https://colab.research.google.com/\n",
         "\n",
@@ -163,7 +163,7 @@
         "\n",
         "And we are focusing on Genomic analysis such as MutMap/QTL-seq.\n",
         "\n",
-        "So, in this lecture, basically you will run the program that we developped through our notebook to experience MutMap/QTL-seq/...etc analysis."
+        "So, in this lecture, basically you will run the program that we developped through our notebook to experience MutMap/QTL-seq/...etc analysis and edit some part."
       ],
       "metadata": {
         "id": "YIFN36M-088W"
@@ -192,7 +192,7 @@
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/MutMap.png?raw=true\" alt=\"title\" height=\"600px\">\n",
         "\n",
-        "In this practice lecture, we plan to experience each step using simulation data to understand the process of MutMap.\n",
+        "In this practice lecture, we will experience each step using simulation data to understand the process of MutMap.\n",
         "\n",
         "And then, we will experience MutMap analysis using some of the published data."
       ],
@@ -205,15 +205,7 @@
       "source": [
         "# 1st practice: MutMap analysis using very simple simulation data\n",
         "\n",
-        "Simulation:\n",
-        "\n",
-        "We assume the plant which has only 1 chromosome & 20 bp.\n",
-        "\n",
-        "(It's not realistic, just simulation.)\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation1.png?raw=true\" alt=\"title\" height=\"150px\">\n",
-        "\n",
-        "!! please run the below code, this code downloads programs. !!"
+        "!! please run the below code, this code downloads programs...etc !!\n"
       ],
       "metadata": {
         "id": "PCBiPJQSstQP"
@@ -224,7 +216,9 @@
       "source": [
         "# Prepare modules & packages\n",
         "!wget -O module_mutmap.py https://github.com/slt666666/FAO_lecture/blob/main/module_mutmap.py?raw=true\n",
-        "\n",
+        "import pandas as pd\n",
+        "pd.set_option('display.max_rows', 1000)\n",
+        "pd.set_option('display.max_columns', 200)\n",
         "from module_mutmap import make_reference_and_mutant\n",
         "from module_mutmap import cross_reference_and_mutant\n",
         "from module_mutmap import bulk_sequencing\n",
@@ -246,24 +240,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1. Create mutation line\n",
+        "## Simulation setting:\n",
         "\n",
-        "At first, we make a mutant line which has several mutations.\n",
+        "In this practice, we assume...\n",
         "\n",
-        "In this simulation, we asssume EMS mutagenesis randomly generates 5 mutations in 20bp.\n",
+        "* **The plant which has only 1 chromosome & 100 bp.**\n",
         "\n",
-        "And one of them changes color of the leaves from green to light green.\n",
+        "* **We introduce 40 SNPs in this plant by EMS mutagenesis to make mutant line.**\n",
         "\n",
-        "(but we don't know which mutation is causative.)\n",
+        "* **Mutation in 1 of 40 SNPs change the leaf color from green to light green.**\n",
         "\n",
-        "ex) EMS mutagenesis \n",
+        "    (But we don't know which SNP is causative.)\n",
         "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation2.png?raw=true\" alt=\"title\" height=\"300px\">\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation2.png?raw=true\" alt=\"title\" height=\"250px\">\n",
         "\n",
+        "If we have this mutant line, to identify the causative SNP that alter leaf color,\n",
         "\n",
-        "Please run the below code to make Reference & Mutant line !\n",
+        "Let's try to perform MutMap analysis !!"
+      ],
+      "metadata": {
+        "id": "lTQeDaH_iNlM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Cross reference and mutant line.\n",
         "\n",
-        "Below code generates the genotype of reference & mutant line.\n"
+        "At first in MutMap analysis, we'll generate F2 progenies from reference line & mutant line.\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation3.png?raw=true\" alt=\"title\" height=\"300px\">\n",
+        "\n",
+        "Please run the below code to make F2 population !\n",
+        "\n",
+        "Below code generates 200 F2 population from reference & mutant line.\n"
       ],
       "metadata": {
         "id": "aoNMPnGj3NHF"
@@ -272,10 +282,8 @@
     {
       "cell_type": "code",
       "source": [
-        "reference, mutant = make_reference_and_mutant(length=20, mutation=5)\n",
-        "\n",
-        "print(\"reference genotype: \", reference)\n",
-        "print(\"   mutant genotype: \", mutant)"
+        "reference, mutant = make_reference_and_mutant(length=100, mutation=40)\n",
+        "progeny = cross_reference_and_mutant(reference, mutant, progeny=200)"
       ],
       "metadata": {
         "id": "wUqWS0tGYoW-"
@@ -286,54 +294,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2. Cross reference & mutant line\n",
-        "\n",
-        "To identify which mutation is the causative mutation, we try to use MutMap analysis.\n",
-        "\n",
-        "To perform MutMap analysis, we generate F2 progenies between reference(original line) and mutant line.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation3.png?raw=true\" alt=\"title\" height=\"400px\">\n",
-        "\n",
-        "These progenies have several mutation that is inherited from mutant line.\n",
-        "\n",
-        "And several progenies showed mutant phenotype.\n",
-        "\n",
-        "※Progenies that showed reference phenotype may also have several mutations, but these mutations are not causative mutation.\n",
-        "\n",
-        "\n",
-        "<br>\n",
-        "\n",
-        "Please run the below code to make F2 progenies!\n",
-        "\n",
-        "Below code generates simulated F2 progenies between reference line & mutant line.\n"
-      ],
-      "metadata": {
-        "id": "E3BsrryI6cYN"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "progeny = cross_reference_and_mutant(reference, mutant, progeny=200)"
-      ],
-      "metadata": {
-        "id": "UGA2dx4QdCQa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "※ Until here(EMS mutagenesis & Generate F2 progeny), these process are experimental part in reality.\n",
         "\n",
         "```\n",
-        "※ The above program generates genotype of progeny which is randomly mixed between reference and mutatnt line.\n",
-        "\n",
+        "※ Memo \n",
+        "The above program generates genotype of progeny which is randomly mixed between reference and mutatnt line.\n",
         "Then, program decide the phenotype based on this genotype.\n",
-        "\n",
         "So, the program stored the genotype & phenotype data of simulated population in the background.\n",
-        "\n",
         "Therefore, we can check the result of MutMap is correct or not by comparing simulated data.\n",
         "\n",
         "```"
@@ -345,19 +311,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. Bulk sequence of mutant trait line\n",
+        "## 2. Bulk sequence of mutant phenotype line\n",
         "\n",
-        "To identify which mutaion is causaive mutation, we select samples which showed mutant phenotype.\n",
+        "The 2nd step is bulk sequencing of mutant phenotype lines.\n",
         "\n",
-        "These samples might have causative variant in common.\n",
+        "Mutant phenotype(light green leaf) samples might have causative SNP mutation.\n",
         "\n",
-        "Then, we conduct bulked sequencing of these samples.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation4.png?raw=true\" alt=\"title\" height=\"250px\">\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation4.png?raw=true\" alt=\"title\" height=\"200px\">\n",
         "\n",
         "Please run the velow code to do the sequencing !\n",
         "\n",
-        "The below code generate 10bp reads of bulk DNA (default is 50 reads)"
+        "The below code generate 20bp reads of bulk DNA (default is 200 reads)\n",
+        "\n",
+        "```\n",
+        "※ Memo\n",
+        "below program generates 20bp reads cause it's simulation.\n",
+        "but usually, sequence reads are 150bp~300bp.\n",
+        "```"
       ],
       "metadata": {
         "id": "e0RkR0EhAVST"
@@ -366,7 +336,7 @@
     {
       "cell_type": "code",
       "source": [
-        "reads = bulk_sequencing(progeny, read=50)"
+        "reads = bulk_sequencing(progeny, read=200)"
       ],
       "metadata": {
         "id": "soVcOIaee44t"
@@ -377,7 +347,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The above program perform sequencing of bulk DNA & generate fastq file of bulked sequences.\n",
+        "The above program perform sequencing of bulk DNA & sequence results(fastq file) is saved in the Colab server.\n",
         "\n",
         "You can check this fastq file using file system in Google Colab ↓\n",
         "\n",
@@ -396,22 +366,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 4. Calculate SNP index\n",
+        "## 3. Alignment sequence reads to refrence genome.\n",
         "\n",
-        "After sequencing bulked DNA, we will align these sequence reads to the reference genome\n",
-        "\n",
-        " and then, try to find the common mutation in mutant lines using SNP index as an indicator."
-      ],
-      "metadata": {
-        "id": "ICTDKi2IDXG6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Alignment of bulk DNA reads to the reference sequence\n",
-        "\n",
-        "To identify which position has mutation or not, we will align these sequences to the reference genome.\n",
+        "After sequencing bulked DNA, we will align these sequence reads to the reference genome to identify SNP positions.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/alignment.png?raw=true\" alt=\"title\" height=\"250px\">\n",
         "\n",
@@ -420,7 +377,7 @@
         "The below code align reads to the reference & show results."
       ],
       "metadata": {
-        "id": "cWYdn7OlDbJ3"
+        "id": "ICTDKi2IDXG6"
       }
     },
     {
@@ -440,12 +397,10 @@
       "source": [
         "\n",
         "```\n",
-        "※ In this notebook, we perform alignment of these reads by our program.\n",
-        "\n",
+        "※ Memo\n",
+        "In this notebook, we perform alignment of these reads by our program.\n",
         "But basically, when we perform alignment, we use mapping tool such as BWA(http://bio-bwa.sourceforge.net/).\n",
-        "\n",
         "So, if you conduct MutMap analysis by your own data, it may has required to use mapping tool.\n",
-        "\n",
         "But MutMap pipeline that we will introduce later contains mapping tools. So, you don't need to care about it.\n",
         "```"
       ],
@@ -456,15 +411,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Calculate SNP index based on alignment results\n",
+        "### 4. Calculate SNP index based on alignment results\n",
         "\n",
-        "After the alignment, we try to identify the mutation that biased to mutant phenotype lines.\n",
+        "After the alignment, the next process is calculating SNP-index.\n",
         "\n",
         "SNP index showed the ratio of the mutant base for each genomic position.\n",
         "\n",
-        "If SNP index is close to 1, almost all mutant lines have mutant at this position.\n",
+        "If SNP index is close to 1, almost all mutant phenotype lines have mutant at this position (= this SNP might be causative SNP).\n",
         "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/SNP_index.png?raw=true\" alt=\"title\" height=\"500px\">\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/SNP_index.png?raw=true\" alt=\"title\" height=\"300px\">\n",
         "\n",
         "Please run the below code to calculate SNP index basde on alignment results !!"
       ],
@@ -487,7 +442,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Visulalize SNP index plot\n",
+        "## 5. Visulalize SNP index plot\n",
         "\n",
         "After calculating SNP index, visualize it to search the causative position.\n",
         "\n",
@@ -513,14 +468,14 @@
       "source": [
         "# check analysis results & real genotype\n",
         "\n",
-        "MutMap analysis showed the candidate position of causative mutation. (position showed SNP index is 1)\n",
+        "MutMap analysis showed the candidate position of causative SNP. (position showed SNP index is 1)\n",
         "\n",
-        "The below code showed the genotype of some progenies that program generated at part2,\n",
+        "The below code showed the genotype of some F2 progenies that simulation program generated.\n",
         "\n",
         "Try to check MutMap result is correct or not !!\n",
         "\n",
         "```\n",
-        "※As mentioned before, this is simulation plants, so all genotypes of progenies are saved in background.\n",
+        "※this is simulation, so all genotypes of progenies are saved in background.\n",
         "```"
       ],
       "metadata": {
@@ -530,10 +485,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "pd.set_option('display.max_rows', 1000)\n",
-        "pd.set_option('display.max_columns', 200)\n",
-        "check_results(reference)"
+        "check_results(reference, SNP_index)"
       ],
       "metadata": {
         "id": "P53_UrRdEQ-d"
@@ -548,7 +500,7 @@
         "\n",
         "MutMap analysis success to identify this position using only reference fasta & bulked fasta!!\n",
         "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/causative.png?raw=true\" alt=\"title\" height=\"400px\">"
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/causative.png?raw=true\" alt=\"title\" height=\"200px\">"
       ],
       "metadata": {
         "id": "s-woPrBgOwGu"
@@ -600,13 +552,14 @@
         "This pipeline is very simple to use.\n",
         "\n",
         "To use this pipeline, the required input data is ...\n",
-        "* reference fasta\n",
-        "* reference sequence reads\n",
-        "* Bulk DNA sequence reads \n",
+        "* reference fasta file\n",
+        "* reference sequence reads fastq file\n",
+        "* Bulk DNA sequence reads fastq file\n",
         "\n",
         "And you just install pipeline & use below command. That's it !\n",
         "\n",
         "```\n",
+        "# command\n",
         "mutmap -r reference_sequences.fasta -c reference.fastq -b bulked_sequences.fastq -n 20 -o output_name\n",
         "```\n",
         "\n",
@@ -614,7 +567,6 @@
         "\n",
         "```\n",
         "ex) The public avaliable reference genome of Rice is Nipponbare cultivar.\n",
-        "\n",
         "But if you want to use different cultivar like Hitomebore cultivar as a reference, reference.fastq is required.\n",
         "```\n"
       ],
@@ -698,7 +650,9 @@
         "# download and load alignment results of chr10\n",
         "!wget -O mutmap_dataset.txt https://raw.githubusercontent.com/CropEvol/lecture/master/data/mutmap_chr10.txt\n",
         "alignment_results = load_data()\n",
-        "alignment_results"
+        "\n",
+        "print(\"Data looks like ...\")\n",
+        "alignment_results.head()"
       ],
       "metadata": {
         "id": "p7yOprThSkOA"
@@ -712,13 +666,13 @@
         "id": "3m7ZsUNo-A8K"
       },
       "source": [
-        "## Calculate SNP index\n",
+        "## Calculate SNP-index\n",
         "\n",
-        "Based on this table information, we calcuate SNP index.\n",
+        "Based on this table information, we calcuate SNP-index.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/calculation.png?raw=true\" alt=\"mutmap_analysis_calc_snpindex\" height=\"200px\">\n",
         "\n",
-        "Please run the below code to calculate SNP index !!"
+        "Please run the below code to calculate SNP-index !!"
       ]
     },
     {
@@ -743,13 +697,7 @@
         "\n",
         "Visualize calculated SNP index to check the causative positon in chromosome 10.\n",
         "\n",
-        "- x axis: position in the chromosome（column:`POS`）\n",
-        "- y axis: SNP index（column:`SNP_index`）\n",
-        "\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/Last_MutMap_plot.png?raw=true\" alt=\"aaa\" height=\"400px\">\n",
-        "\n",
-        "Please run the below code to visualize SNP index in the chromosome 10 !!"
+        "Please run the below code to visualize SNP-index in the chromosome 10 !!"
       ]
     },
     {
