--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -411,13 +411,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4. Calculate SNP index based on alignment results\n",
+        "### 4. Calculate SNP-index based on alignment results\n",
         "\n",
         "After the alignment, the next process is calculating SNP-index.\n",
         "\n",
         "SNP index showed the ratio of the mutant base for each genomic position.\n",
         "\n",
-        "If SNP index is close to 1, almost all mutant phenotype lines have mutant at this position (= this SNP might be causative SNP).\n",
+        "If SNP index is close to 1, almost all mutant phenotype lines have different genotype from reference at this position (= this SNP might be causative SNP).\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/SNP_index.png?raw=true\" alt=\"title\" height=\"300px\">\n",
         "\n",
@@ -496,7 +496,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The setting of this simulation was ... The \"Light Green\" phenotyope is controlled by the one mutation.\n",
+        "The setting of this simulation was ... The \"Light Green\" phenotyope is controlled by the one SNP mutation.\n",
         "\n",
         "MutMap analysis success to identify this position using only reference fasta & bulked fasta!!\n",
         "\n",
@@ -718,11 +718,13 @@
         "\n",
         "However, there are several regions that showed SNP-index > 0.8.\n",
         "\n",
+        "**It means there are several genes affect leaf color ? Maybe No.**\n",
+        "\n",
         "Some of them might be occurred by low depth, sequence error...etc (false positives).\n",
         "\n",
         "So, we need to reduce false positives, and\n",
         "\n",
-        "\"Sliding window\" analysis is one of the approaches to reduce these false positives.\n",
+        "**Sliding window** analysis is one of the approaches to reduce these false positives.\n",
         "\n",
         "We will try to do sliding window analysis tomorrow practice !"
       ],
@@ -739,14 +741,26 @@
         "---\n",
         "## Summary\n",
         "\n",
-        "In this notebook, we demonstrate **MutMap** analysis using simulation data & published sample data to understand the process of MutMap analysis.\n",
+        "In this notebook, we demonstrate **MutMap** analysis using simulation data to understand the process of MutMap analysis..\n",
+        "\n",
+        "Also, we check the MutMap analysis result of published data to interpret results of MutMap analysis.\n",
         "   \n",
-        "And if you want to conduct MitMap analysis, the pipeline that our lab developped is prepared.\n",
+        "And if you want to conduct MitMap analysis, the pipeline that our group developped is prepared.\n",
         "(https://github.com/YuSugihara/MutMap)\n",
         "   \n",
-        "Tomorrow, we'll demonstrate **QTL-seq** analysis & **Sliding window** analysis for MutMap & QTL-seq to identify causative genes.\n",
-        "\n"
+        "Tomorrow, we'll demonstrate **QTL-seq** analysis & **Sliding window** analysis for MutMap & QTL-seq.\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "oUXQUv6r6mb2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
