--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -205,6 +205,8 @@
       "source": [
         "# 1st practice: MutMap analysis using very simple simulation data\n",
         "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/intro.png?raw=true\" alt=\"title\" height=\"200px\">\n",
+        "\n",
         "!! please run the below code, this code downloads programs...etc !!\n"
       ],
       "metadata": {
