--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -84,11 +84,11 @@
         "\n",
         "In the Google Colab, we call this page(file) is \"Notebook\". We use this Notebook to edit/show/run the programs.\n",
         "\n",
-        "In addition, you can access and use the notebook that other people made.\n",
+        "In addition, **you can access and use the notebook that other people made.** ex) This notebook!\n",
         "\n",
-        "So, using Google Colab, you can experience programming without setting of your own PC & without writing a program!\n",
+        "So, using Google Colab, you can experience several analysis without setting of your own PC & without writing a program!\n",
         "\n",
-        "In our lecture, we will use our notebooks to experience MutMap anaylsis, QTL-seq analysis (tomorrow), Genomic analysis (day after tomorrow).\n",
+        "In our lecture, we will use our notebooks to experience MutMap anaylsis, QTL-seq analysis, Genomic Prediction analysis.\n",
         "\n",
         "**And we keep these notebooks in the server, so you can access these notebooks at any time even after this lecture**"
       ],
@@ -103,11 +103,11 @@
         "\n",
         "In the notebook, there are 2 type of cells.\n",
         "\n",
-        "The cell shows texts & figures is text cell. \n",
+        "**Text cell & Code cell.**\n",
         "\n",
-        "The cell shows code (like below cell) is code cell.\n",
+        "Text cell shows documents, like texts & figures. \n",
         "\n",
-        "In the Google Colab notebook, you can write code(program), and run your program in the code cell.\n",
+        "Code cell shows code (like below cell). You can run the code(program) that written in the code cell.\n",
         "\n",
         "```\n",
         "How to run the program\n",
@@ -119,7 +119,7 @@
         "  - [for Mac] Select the code cell and press the \"control + Enter\" keys.\n",
         "```\n",
         "\n",
-        "please try to run (& edit) the below code."
+        "please try to run (& edit) the below code cells."
       ],
       "metadata": {
         "id": "Xt6EApFB9zM2"
@@ -128,7 +128,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# sample code\n",
+        "# This is Code cell\n",
         "\n",
         "11 + 100"
       ],
@@ -141,7 +141,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# sample code2\n",
+        "# sample code\n",
         "\n",
         "for i in range(10):\n",
         "  print(\"{}x{}x{} = \".format(i,i,i), i*i*i)"
@@ -155,15 +155,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Googel Colab has a lot of useful functions such as save & export notebook,  use environment for Machine Learning ... etc\n",
+        "Googel Colab has a lot of useful functions such as visualization, environments for Statistical analysis, Machine Learning ... etc.\n",
         "\n",
-        "https://colab.research.google.com/\n",
+        "You can check it here → https://colab.research.google.com/\n",
         "\n",
         "But, unfortunately, we have limited time, so we don't have time to teach other functions, how to do programming...etc.\n",
         "\n",
         "And we are focusing on Genomic analysis such as MutMap/QTL-seq.\n",
         "\n",
-        "So, in this lecture, basically you will run the program that we developped through our notebook to experience MutMap/QTL-seq/...etc analysis and edit some part."
+        "So, in this lecture, basically I'll ask you to run the program that we developped through our notebook to experience MutMap/QTL-seq/...etc.\n",
+        "\n",
+        "If you understand how to run the code, that's enough!"
       ],
       "metadata": {
         "id": "YIFN36M-088W"
