--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -415,7 +415,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4. Calculate SNP-index based on alignment results\n",
+        "## 4. Calculate SNP-index based on alignment results\n",
         "\n",
         "After the alignment, the next process is calculating SNP-index.\n",
         "\n",
