--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -402,10 +402,10 @@
         "\n",
         "```\n",
         "※ Memo\n",
-        "In this notebook, we perform alignment of these reads by our program.\n",
+        "In this notebook, we perform alignment of these reads & SNP calling by our program.\n",
         "But basically, when we perform alignment, we use mapping tool such as BWA(http://bio-bwa.sourceforge.net/).\n",
-        "So, if you conduct MutMap analysis by your own data, it may has required to use mapping tool.\n",
-        "But MutMap pipeline that we will introduce later contains mapping tools. So, you don't need to care about it.\n",
+        "And we use BCFtools, GATK...etc for SNP calling (https://samtools.github.io/bcftools/).\n",
+        "But MutMap pipeline that we will introduce later contains mapping tools & SNP caller. So, you don't need to care about it.\n",
         "```"
       ],
       "metadata": {
@@ -479,7 +479,7 @@
         "Try to check MutMap result is correct or not !!\n",
         "\n",
         "```\n",
-        "※this is simulation, so all genotypes of progenies are saved in background.\n",
+        "※this is simulation, so, all genotypes of progenies are saved in background.\n",
         "```"
       ],
       "metadata": {
@@ -556,9 +556,9 @@
         "This pipeline is very simple to use.\n",
         "\n",
         "To use this pipeline, the required input data is ...\n",
-        "* reference fasta file\n",
-        "* reference sequence reads fastq file\n",
-        "* Bulk DNA sequence reads fastq file\n",
+        "* fasta file of reference genome\n",
+        "* fastq file of reference sequence\n",
+        "* fastq file of Bulk DNA sequence\n",
         "\n",
         "And you just install pipeline & use below command. That's it !\n",
         "\n",
@@ -570,7 +570,8 @@
         "<br>\n",
         "\n",
         "```\n",
-        "ex) The public avaliable reference genome of Rice is Nipponbare cultivar.\n",
+        "※ Memo\n",
+        "The public avaliable reference genome of Rice is Nipponbare cultivar.\n",
         "But if you want to use different cultivar like Hitomebore cultivar as a reference, reference.fastq is required.\n",
         "```\n"
       ],
