--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -109,17 +109,9 @@
         "\n",
         "Code cell shows code (like below cell). You can run the code(program) that written in the code cell.\n",
         "\n",
-        "```\n",
-        "How to run the program\n",
+        "**You can run the program by Click \"▶︎\" botton that is in the top left of the code cell.**\n",
         "\n",
-        "  There are several ways to run the program: \n",
-        "  - Click \"▶︎\" botton that is in the top left of the code cell\n",
-        "  - Select the code cell and press \"Shift + Enter\" key.\n",
-        "  - [for Windows] Select the code cell and press \"Ctrl + Enter\" key.\n",
-        "  - [for Mac] Select the code cell and press the \"control + Enter\" keys.\n",
-        "```\n",
-        "\n",
-        "please try to run (& edit) the below code cells."
+        "Please try to run (& edit) the below code cells."
       ],
       "metadata": {
         "id": "Xt6EApFB9zM2"
@@ -141,7 +133,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# sample code\n",
+        "# sample code to calculate cubed number of 0~9\n",
         "\n",
         "for i in range(10):\n",
         "  print(\"{}x{}x{} = \".format(i,i,i), i*i*i)"
@@ -567,13 +559,7 @@
         "mutmap -r reference_sequences.fasta -c reference.fastq -b bulked_sequences.fastq -n 20 -o output_name\n",
         "```\n",
         "\n",
-        "<br>\n",
-        "\n",
-        "```\n",
-        "※ Memo\n",
-        "The public avaliable reference genome of Rice is Nipponbare cultivar.\n",
-        "But if you want to use different cultivar like Hitomebore cultivar as a reference, reference.fastq is required.\n",
-        "```\n"
+        "then, you can get data file that contains SNP positions & SNP-index values & graph that visualize it."
       ],
       "metadata": {
         "id": "xJevQ0MeT8-4"
