--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -155,7 +155,7 @@
         "\n",
         "And we are focusing on Genomic analysis such as MutMap/QTL-seq.\n",
         "\n",
-        "So, in this lecture, basically I'll ask you to run the program that we developped through our notebook to experience MutMap/QTL-seq/...etc.\n",
+        "So, in this lecture, basically I'll ask you to run the program that we developped to experience MutMap/QTL-seq/...etc.\n",
         "\n",
         "If you understand how to run the code, that's enough!"
       ],
@@ -411,7 +411,7 @@
         "\n",
         "After the alignment, the next process is calculating SNP-index.\n",
         "\n",
-        "SNP index showed the ratio of the mutant base for each genomic position.\n",
+        "SNP index showed the ratio of the mutant base for each SNP position.\n",
         "\n",
         "If SNP index is close to 1, almost all mutant phenotype lines have different genotype from reference at this position (= this SNP might be causative SNP).\n",
         "\n",
@@ -517,7 +517,9 @@
         "\n",
         "```\n",
         "※if you specify large length (like 10000~), it may take so much time.\n",
-        "```"
+        "```\n",
+        "\n",
+        "For example, if we don't have enough money to perform sequencing...what kind of results will we get?"
       ],
       "metadata": {
         "id": "miYIj1If9soJ"
@@ -526,7 +528,7 @@
     {
       "cell_type": "code",
       "source": [
-        "MutMap_simulation(length=100, mutation=20, progeny=200, read=10)"
+        "MutMap_simulation(length=100, mutation=40, progeny=200, read=10)"
       ],
       "metadata": {
         "id": "jv8KLVmn-U1C"
@@ -642,8 +644,8 @@
         "!wget -O mutmap_dataset.txt https://raw.githubusercontent.com/CropEvol/lecture/master/data/mutmap_chr10.txt\n",
         "alignment_results = load_data()\n",
         "\n",
-        "print(\"Data looks like ...\")\n",
-        "alignment_results.head()"
+        "print(\"Data is...\")\n",
+        "alignment_results"
       ],
       "metadata": {
         "id": "p7yOprThSkOA"
