--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -379,8 +379,7 @@
     {
       "cell_type": "code",
       "source": [
-        "alignment_result = alignment(reads, reference)\n",
-        "alignment_result"
+        "alignment_result = alignment(reads, reference)"
       ],
       "metadata": {
         "id": "NGzsiHp_DU6C"
@@ -413,7 +412,7 @@
         "\n",
         "SNP index showed the ratio of the mutant base for each SNP position.\n",
         "\n",
-        "If SNP index is close to 1, almost all mutant phenotype lines have different genotype from reference at this position (= this SNP might be causative SNP).\n",
+        "If SNP index is close to 1, almost all bulked DNA reads (= almost all mutant phenotype lines) have different genotype from reference at this position (= this SNP might be causative SNP).\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/SNP_index.png?raw=true\" alt=\"title\" height=\"300px\">\n",
         "\n",
