--- a/textbook/MutMap.ipynb
+++ b/textbook/MutMap.ipynb
@@ -379,7 +379,8 @@
     {
       "cell_type": "code",
       "source": [
-        "alignment_result = alignment(reads, reference)"
+        "alignment_result = alignment(reads, reference)\n",
+        "alignment_result"
       ],
       "metadata": {
         "id": "NGzsiHp_DU6C"
